--- a/AITSurvey/Web.config
+++ b/AITSurvey/Web.config
@@ -7,7 +7,7 @@
   <connectionStrings>
   <add name="ConnectionString"
       providerName="System.Data.SqlClient"
-      connectionString="Data Source=SYEDSHARIQ2B37;Initial Catalog=ResearchDb;Integrated Security=True;MultipleActiveResultSets=True" />
+      connectionString="Data Source=SYEDSHARIQ2B37;Initial Catalog=AitResearch;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
