--- a/AITSurvey.Core/AITResearch.Core.csproj
+++ b/AITSurvey.Core/AITResearch.Core.csproj
@@ -48,17 +48,17 @@
     <Compile Include="Implementation\QuestionService.cs" />
     <Compile Include="Implementation\RespondentSearchService.cs" />
     <Compile Include="Implementation\StaffService.cs" />
+    <Compile Include="Implementation\SurveyService.cs" />
     <Compile Include="Models\AnswerViewDto.cs" />
+    <Compile Include="Models\QuestionValidationGroup.cs" />
     <Compile Include="Models\RespondentSearchRequest.cs" />
     <Compile Include="Models\RespondentSearchResult.cs" />
     <Compile Include="Models\SearchListQuestionIdOptions.cs" />
     <Compile Include="Repository\AnswerRepository.cs" />
     <Compile Include="Repository\Connection.cs" />
     <Compile Include="Implementation\RespondentService.cs" />
-    <Compile Include="Implementation\SelectListItemService.cs" />
     <Compile Include="Models\Option.cs" />
     <Compile Include="Models\Answer.cs" />
-    <Compile Include="Models\QuestionGroup.cs" />
     <Compile Include="Models\QuestionType.cs" />
     <Compile Include="Models\Respondent.cs" />
     <Compile Include="Models\Question.cs" />
@@ -67,10 +67,12 @@
     <Compile Include="Models\Survey.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Staff.cs" />
+    <Compile Include="Repository\DataConvertorExtention.cs" />
     <Compile Include="Repository\OptionsRepository.cs" />
     <Compile Include="Repository\QuestionRepository.cs" />
     <Compile Include="Repository\RespondentRepository.cs" />
     <Compile Include="Repository\RespondentSearchRepository.cs" />
+    <Compile Include="Repository\SurveyRepository.cs" />
     <Compile Include="Repository\StaffReporsitory.cs" />
     <Compile Include="TypeOptions.cs" />
   </ItemGroup>
